hello-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node-deployment
spec:
  replicas: 2
  minReadySeconds: 5
  selector:
    matchLabels: # .selector.matchLabels는 Pod를 식별하는 데 사용함
      app: hello-node-deployment
      tier: backend
  template:
    metadata: # .spec.template.metadata.labels는 spec.selector와 일치해야 함
      name: hello-node-deployment-pod
      labels:
        app: hello-node-deployment
        tier: backend
    spec:
      containers:
        - name: hello-node-deployment
          image: usupool94/hello-deployment:v1
          imagePullPolicy: Always
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "100m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "200m"
          ports:
            - containerPort: 5000
