hello-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-service
spec:
  selector:
    app: hello-node-deployment
    tier: backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
